<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_phone_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhoneDetailActivity">

    <include
        layout="@layout/layout_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_detail_icon"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/img_add_icon"
            android:src="@mipmap/default_contact_head_icon"
            tools:ignore="RtlHardcoded"/>

        <TextView
            android:id="@+id/txt_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/img_detail_icon"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded"/>
    </RelativeLayout>

    <View style="@style/gray_line_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/phone_number_1"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txt_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="110"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/img_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@mipmap/faq_sms_noti"/>
    </LinearLayout>

    <View style="@style/gray_line_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/e_mail"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txt_email"
            style="@style/detail_page_txt_style"
            android:text="110@qq.com"/>

    </LinearLayout>

    <View style="@style/gray_line_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"


        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txt_address"
            style="@style/detail_page_txt_style"
            android:text="110@qq.com"/>
    </LinearLayout>

    <View style="@style/gray_line_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/text_qr"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/img_qrcode"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/icon_qr"/>
    </LinearLayout>

    <View style="@style/gray_line_style"/>

    <Button
        android:id="@+id/btn_edit"
        style="@style/detail_page_btn_style"
        android:text="@string/edit_users"/>

    <Button
        android:id="@+id/btn_delete"
        style="@style/detail_page_btn_style"
        android:text="@string/delete_user"/>

    <Button
        android:id="@+id/btn_send_desktop"
        style="@style/detail_page_btn_style"
        android:text="@string/send_to_desktop"/>
</LinearLayout>
